<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_g29_adapter</name>
  <version>0.0.1</version>
  <description>Adapter/bridge between Autoware and Logitech G29 steering wheel</description>
  
  <maintainer email="billy.nugraha.s@gmail.com">Billy Nugraha</maintainer>
  <author email="billy.nugraha.s@gmail.com">Billy Nugraha</author>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>ros_g29_force_feedback</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>